dark mode hightlight and aspect ratio bug fix

--- a/src/containers/ImageFilter.css
+++ b/src/containers/ImageFilter.css
@@ -28,7 +28,6 @@
 }
 
 .filter__thumbnail {
-  aspect-ratio: 1;
+  width: 64px;
   height: 64px;
-  width: auto;
 }
